Mon Mar 16 14:13:38 GMT 2009    Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php: Changed paths to use '/db/' prefix.
    * unittests/_restclient.php: Rewritten using regexps.
    * unittests/test_fields/php: Tidied.

Mon Mar 16 10:02:52 GMT 2009    Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php, unittests/_restclient.php, unittests/test_fields.php: 
      Added delete field method.

Fri Mar 13 15:48:37 GMT 2009    Tom Mortimer <tom@lemurconsulting.com>

    * Added some basic functionality and tests for database fields.

Fri Mar 13 12:13:31 GMT 2009    Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php, unittests/_restclient.php, unittests/test_database.php:
      Moved delete() into database object and changed tests accordingly.